# chronicle

./: .gitignore  LAUNCH.md  PLAN.md  PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
chronicle/: __init__.py  cli.py  formatter.py  grouper.py  reader.py  scanner.py  summarizer.py
tests/: test_formatter.py  test_grouper.py  test_reader.py
