[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronicle-git"
version = "0.1.0"
description = "Your git history, told as a story."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["git", "cli", "developer-tools", "productivity", "standup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "gitpython>=3.1",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
chronicle = "chronicle.cli:app"

[project.urls]
Homepage = "https://github.com/pikappa13/chronicle"
Repository = "https://github.com/pikappa13/chronicle"
Issues = "https://github.com/pikappa13/chronicle/issues"

[tool.hatch.version]
path = "chronicle/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["chronicle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
